# biq-analytics

./: .env.example  .gitignore  AGENTS-ROADMAP.md  BACKLOG.md  BI-PIVOT.md  BIQ-PRODUCT-OVERVIEW.md  POS-ROADMAP.md  PWA-ROADMAP.md  README.md  REPORTS-ROADMAP.md  ROADMAP.md  SALES-PLAYBOOK.md  SCANNING-ROADMAP.md  agentuity.config.ts  agentuity.json  app.ts  package.json  tsconfig.json
.github/: copilot-instructions.md
analytics-service/: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
analytics-service/src/: app.py  config.py  dispatcher.py  models.py  validation.py
analytics-service/src/anomaly/: isolation_forest.py  shrinkage.py
analytics-service/src/charts/: __init__.py  forecast_plot.py  geo_map.py  heatmap.py  pareto.py  render_chart.py  sales_trends.py  scatter.py  treemap.py  waterfall.py
analytics-service/src/classification/: abc_xyz.py  bundles.py  clv.py  rfm.py
analytics-service/src/forecasting/: arima.py  holt_winters.py  prophet_forecast.py  safety_stock.py  seasonal_detect.py
analytics-service/src/insights/: cash_simulation.py  dead_stock.py  procurement_plan.py  sales_velocity.py  stockout_cost.py  supplier_analysis.py  value_gap.py
analytics-service/tests/: conftest.py  test_anomaly.py  test_api.py  test_charts.py  test_classification.py  test_forecasting.py  test_insights.py  test_validation.py
demo/: README.md  check-db  pending features  prospects.csv  rating  safari-biq-knowledge-base.txt  sandbox-info.json  seed-agents.ts  seed-analytics-configs.ts  seed-auth.ts  seed-csv-data.ts  (+3 more)
(+340 files in other folders)
