[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "biq-analytics-service"
version = "1.0.0"
requires-python = ">=3.13"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
